- [BREAKING CHANGE] Android: Removed `AndroidApplicationConfiguration#touchSleepTime`.
- [BREAKING CHANGE] Skin `setEnabled` now only works with actors that implement `Styleable`. Use `setEnabledReflection` for old behavior or add `Styleable` to your actors.
- API Addition: Allow option to set Box2D native ContactFilter (World#setContactFilter(null)) for performance improvements.
- API Addition: Added BooleanArray#replaceFirst and BooleanArray#replaceAll
- API Addition: Added ByteArray#replaceFirst and ByteArray#replaceAll
- API Addition: Added CharArray#replaceFirst and CharArray#replaceAll
- API Addition: Added DelayedRemovalArray#replaceFirst and DelayedRemovalArray#replaceAll
- API Addition: Added FloatArray#replaceFirst and FloatArray#replaceAll
- API Addition: Added IntArray#replaceFirst and IntArray#replaceAll
- API Addition: Added LongArray#replaceFirst and LongArray#replaceAll
- API Addition: Added ShortArray#replaceFirst and ShortArray#replaceAll
- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll
- API Addition: Actors that implement `getStyle` and `setStyle` should now implement the `Styleable` interface
- API Addition: Added BitmapFontCache#getPageCount.
- Android: Fixed rare NPE when `onDestroy` was called
- API Deprecation: Deprecated ReflectionPool and the related Pools#get/Pools#obtain method. Please use the new DefaultPool with the new Pools#get/Pools#obtain methods. They offer more safety and can be used with the java 8 method reference syntax (e.g. Pools.get(MyClass::new))
- API Deprecation: Deprecated constructors taking a "Class" for Queue/ArrayMap/Array. Please use the constructors utilising "ArraySupplier". They offer more safety and can be used with the java 8 method reference syntax (e.g. MyClass[]::new)
- iOS: Update to MobiVM 2.3.23

[1.13.1]